src/global.scss
/* ... */
.calendar {
  color: rgb(255,255,255) !important;
}

.calendar-hour-column, .weekview-allday-label, .dayview-allday-label {
  width: 100px !important;
}





.weekview-allday-content-table td, {
  border: 1px solid #FFFFFF !important;
  border-top: transparent !important;
}

.weekview-allday-label {
  border-top: transparent !important;
  border-left: 1px solid #FFFFFF !important;
  border-bottom: 1px solid #FFFFFF !important;
}

.slide-container {
  padding: 2px !important;
  overflow: scroll !important;
  scrollbar-width: none !important;
}

.weekview-current {
  background-color: #439194 !important;
}


.signInButton {
    margin-left: 20px;
}

.secondary {
  width: 70%;
  margin: auto;
  margin-top: 100px;
  background-color: var(--ion-color-secondary);
  color: #000000;
}

ion-item {
        white-space: pre-line;
}

.content-container {
  background-color: var(--ion-color-secondary);
  border-radius: 20px;
  padding: 10px;
  color: #000000;
}

ion-toolbar {
    --color: var(--ion-color-white) !important;
}

.item-md.item-block .item-inner {
  border-bottom: transparent;
}

.header-container {
  background-color: var(--ion-color-primary);
  padding-left: 20px;
  height: 110px;
}

.header-logo {
  margin-top: 50px;
}

.font-size-1rem {
  font-size: 1rem !important;
}

.font-size-0-8rem {
  font-size: 0.8rem !important;
}

.font-size-12px {
  font-size: 12px !important;
}

.font-size-15px {
  font-size: 15px !important;
}

.font-size-20px {
  font-size: 20px !important;
}

.font-size-30px {
  font-size: 30px !important;
}

.font-size-40px {
  font-size: 40px !important;
}

.font-size-50px {
  font-size: 50px !important;
}

.line-height-1 {
  line-height: 1 !important;
}

.text-muted {
  padding: 0 !important;
}

.monthview-datetable {
  padding: 0 !important;
}

.swiper-slide {
  padding: 1px !important;
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
  padding: 0 !important;
}

.table[_ngcontent-bhf-c3] > thead[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > th[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tbody[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > th[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tfoot[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > th[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > thead[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > td[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tbody[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > td[_ngcontent-bhf-c3], .table[_ngcontent-bhf-c3] > tfoot[_ngcontent-bhf-c3] > tr[_ngcontent-bhf-c3] > td[_ngcontent-bhf-c3] {
  padding: 0 !important;
}

.font-size-1-5rem {
  font-size: 1.5rem !important;
}

.font-size-2rem {
  font-size: 2rem !important;
}

.header-icons-div {
  height: 22px;
  background-color: var(--ion-color-primary);
  position: absolute;
  bottom: 0;
  right: 0;
  margin-bottom: 1px;
  margin-right: 20px;
}

.header-icon {
  background-color: var(--ion-color-primary);
  color: #FFFFFF;
  font-size: 20px;
}

.calendar-event-wrap, .dayview-allday-content-table {
  border: 0px !important;
}

.dayview-allday-content-table td {
  border: 0px !important;
}

.dayview-allday-label {
  border: 0px !important;
}

.dayview-allday-table {
  border: 1px solid #FFFFFF !important;
}

.weekview-header, .weekview-allday-table, .weekview-normal-event-container {
  background-color: var(--ion-color-secondary);
}

.weekview-allday-table {
  height: auto !important;
  min-height: 50px !important;
}

.weekview-allday-content-wrapper {
  height: auto !important;
  min-height: 51px !important;
}

.weekview-normal-event-container {
  display: block !important;
  position: relative !important;
  margin-top: 2px !important;
  max-height: 350px !important;
  overflow: scroll !important;
  scrollbar-width: none !important;
}

.monthview-primary-with-event, .monthview-secondary-with-event {
  background-color: #666666 !important;
}

.monthview-current {
  background-color: #038a0c !important;
}

.monthview-selected {
  background-color: #FFFFFF !important;
  color: #000000 !important
}

.calendar-hour-column, .weekview-header {
  border: 0px !important;
}

.weekview-header, .slides-container {
  border: 0px;
}

.weekview-normal-event-container {
  bottom: 0px;
}

.alert-wrapper {
  --background: rgb(0,0,0); 
}

.alert-button-group {
  display: flex;
  justify-content: space-around !important;
}

.flex-direction-row {
  flex-direction: row;  
}

.alert-button-group-vertical {
  flex-direction: row !important;
}

.margin-top-5 {
  margin-top: 5px;
}

.margin-auto-auto {
  margin: auto auto;
}

.padding-bottom-50 {
  padding-bottom: 50px !important;
}

.weekview-container {
  width: 95% !important;
  margin: auto;
}

.swiper-slide, swiper-slide-active {
  width: 100% !important;
}

.primary {
  background-color: var(--ion-color-primary);
  color: var(--ion-color-white) !important;
}

.calendar-event-inner {
  height: 100%;
}

.background-secondary {
  background-color: var(--ion-color-secondary) !important;
  color: #000000 !important;
}

.background-white {
  background-color: var(--ion-color-white);
}

.background-transparent {
  background-color: transparent;
}

ion-input {
  scrollbar-width: none;
  text-align: center;
  input {
      text-align: center;
      ::-webkit-input-placeholder {
          text-align: center;
      }
    }
    border-bottom-color: transparent;
}

.border-radius-20px {
  border-radius: 20px;
}

.border-radius-5px {
  border-radius: 5px;
}

.overflow-scroll {
  overflow: scroll;
}

.no-scrollbar {
  scrollbar-width: none;
}

.margin-10 {
  margin: 10px;
}

.margin-0 {
  margin: 0px;
}

.margin-left-0 {
  margin-left: 0px;
}

.margin-left-3 {
  margin-left: 3px;
}

.margin-left-10 {
  margin-left: 10px;
}

.margin-left-auto {
  margin-left: auto;
}

.margin-left-30 {
  margin-left: 30px;
}

.margin-left-50 {
  margin-left: 50px;
}

.margin-right-auto {
  margin-right: auto;
}
/* ... */

